progress commit